added sticky scroll to vscode

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -15,5 +15,6 @@
   "[java]": {
     "editor.defaultFormatter": "redhat.java"
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "editor.stickyScroll.enabled": true
 }
